Fix color contrast of TOC list in dark mode

--- a/_includes/components/toc.css
+++ b/_includes/components/toc.css
@@ -94,6 +94,7 @@
 @media (prefers-color-scheme: dark) {
   .elv-toc-list li.elv-toc-active > a {
     background-color: #353535;
+    color: #00bcd4;
   }
 }
 .elv-toc-list ul .elv-toc-active > a:after {
